--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         </div>
         <ul id="taskList"></ul>
     </div>
-    <script src="todolist.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
+
 
